fix: certificate bottom align

--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,6 @@
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   padding: 0;
   margin: 0;
@@ -262,7 +261,7 @@ img {
   .certificate__footer-wrapper {
     flex-direction: column-reverse;
     align-items: center;
-    gap: 20px;
+    gap: 36px;
   }
 
   .certificate__date {
@@ -288,6 +287,16 @@ img {
 
   .certificate__course-logo {
     max-width: 360px;
+  }
+
+  .certificate__date-text {
+    text-align: center;
+  }
+
+  .certificate__signature,
+  .certificate__date {
+    align-items: center;
+    align-self: center;
   }
 }
 
